# proj1-iep

./: CMakeLists.txt
inc/: casti.hpp  device.hpp  telefon.hpp  televizor.hpp
src/: casti.cpp  device.cpp  main.cpp  telefon.cpp  televizor.cpp
